syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message GetNumbersInRangeRequest {
    int64 firstValue = 1;
    int64 lastValue = 2;
}

message GetNumbersInRangeResponse {
    int64 number = 1;
}

service NumbersService {
    rpc getNextNumber(GetNumbersInRangeRequest) returns (stream GetNumbersInRangeResponse);
}
